src/ludivine/client/network/network.css
/* Copyright (C) 2024  Niels Martignène <niels.martignene@protonmail.com>

   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <https://www.gnu.org/licenses/>. */

.net_wrapper {
    position: relative;
    display: flex;
    flex: 1;
    gap: 12px;
}

.net_canvas {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    background: var(--box_color);
    border-radius: 16px;
    z-index: 1;
}

.net_actions {
    display: flex;
    position: absolute;
    gap: 6px;
    z-index: 2;
}
.net_actions.align1 {
    flex-direction: column;
    left: 12px;
    bottom: 12px;
}
.net_actions.align2 {
    left: 50%;
    bottom: 12px;
    transform: translateX(-50%);
}
.net_actions.align3 {
    flex-direction: column;
    right: 12px;
    bottom: 12px;
}
.net_actions.align4 {
    flex-direction: column;
    left: 12px;
    top: 50%;
    transform: translateY(-50%);
}
.net_actions.align5 {
    flex-direction: column;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}
.net_actions.align6 {
    flex-direction: column;
    right: 12px;
    top: 50%;
    transform: translateY(-50%);
}
.net_actions.align7 {
    flex-direction: column;
    left: 12px;
    top: 12px;
}
.net_actions.align8 {
    left: 50%;
    top: 12px;
    transform: translateX(-50%);
}
.net_actions.align9 {
    flex-direction: column;
    right: 12px;
    top: 12px;
}

.not_quality {
    /*  Keep in sync with QUALITY_COLORS in constants.js */
    --start: #b13737;
    --middle: #efbe48;
    --end: #3fa26b;

    & > input[type=range] {
        &::-webkit-slider-runnable-track { background: linear-gradient(.25turn, var(--start), var(--middle) 50%, var(--end)); }
        &::-moz-range-track { background: linear-gradient(.25turn, var(--start), var(--middle) 50%, var(--end)); }
    }
}

@media screen and (max-width: 960px) {
    .net_actions > button.small { display: none; }
}

